[metadata]
name = cppdf
version = 0.1.0
author = Amit Weis
description = Convert C++ code files to PDF with syntax highlighting and themes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    reportlab>=3.6

[options.entry_points]
console_scripts =
    cppdf = cppdf.cli:main

